[Feature]-Receive message by SID